<resources>
    <string name="app_name">Easy Storage</string>

    <string name="title">Easy Storage</string>
    <string name="main_logo">Main Logo</string>

    <!--Initial Page-->
    <string name="know_about_easyStorage">Know About Easy Storage</string>
    <string name="login">Log In</string>
    <string name="register">Register</string>

    <!--Know About Easy Storage -->
    <string name="what_easy_storage" formatted="false">What is Easy Storage?</string>
    <string name="what_easy_storage_answer">•Easy Storage is a self-storage facility that provides extra storage space for individuals and businesses across India.
    \n•They offer a range of self-storage options, including household storage units and furniture storage units.
    \n•Easy Storage helps customers store their belongings securely during relocation, renovation, or any other time they need additional space.
    \n•Easy Storage provides packing and moving services to help customers transport their items to and from their self-storage units.
    \n•Overall, Easy Storage provides a convenient and reliable solution for anyone who needs extra storage space in India.</string>
    <string name="services">Our Services</string>
    <string name="document">Document Storage</string>
    <string name="document_info">Easy Storage provides records or documents management storage services for professional and small businesses for safe and secure business storage</string>
    <string name="automobile">Automobile Storage</string>
    <string name="automobile_info">Easy Storage gives 24x7 monitored automobile service, kept in a clean environment</string>
    <string name="furniture">Furniture Storage</string>
    <string name="furniture_info">We also provides storages for household furniture, kept with proper care</string>


    <!--How It Works-->
    <string name="how_it_works">How Easy Storage Works?</string>
    <string name="one">01</string>
    <string name="pack_at_home">We pack at your home</string>
    <string name="two">02</string>
    <string name="pick_at_doorstep">We pick up from your doorstep</string>
    <string name="three">03</string>
    <string name="store">We store at our warehouse</string>
    <string name="four">04 </string>
    <string name="deliver">We deliver when you need</string>
    <string name="toMain">Go to Main Page</string>


    <!--Register -->
    <string name="user_name">Name : </string>
    <string name="user_address">Address : </string>
    <string name="user_email">Email : </string>
    <string name="user_number">Mobile : </string>
    <string name="user_password">Password : </string>
    <string name="hint_enter_name">Enter your name</string>
    <string name="hint_enter_address">Enter home address</string>
    <string name="hint_enter_email">Enter your email</string>
    <string name="hint_enter_mobile">Enter mobile number</string>
    <string name="hint_enter_password">Enter password</string>
    <string name="submit">Submit</string>

    <!--Check Register-->
    <string name="makeChanges">Make Changes</string>

    <!--Login Activity-->
    <string name="forgot_password">Forgot password?</string>
    <string name="continue_without_login">Continue without login</string>

    <!--Homescreen-->
    <string name="store_furniture">Store Furniture</string>
    <string name="store_automobile">Store Automobile</string>
    <string name="store_documents">Store Documents</string>
    <string name="create_order">Create Order</string>
    <string name="order_history">Order History</string>
    <string name="logout">Log Out</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="view_order_history">View Order History</string>


    <!--Furniture Storage-->
    <string name="furniture_storage">Furniture Storage</string>
    <string name="select_room_size">Select room size</string>
    <string name="room_size_price">Price : </string>
    <string name="select_time_period">Select time period</string>
    <string name="calculate_cost">Calculate cost</string>


    <!--Automobile Storage-->
    <string name="automobile_storage">Automobile Storage</string>
    <string name="select_slot_size">Select slot size</string>


    <!--Document Storage-->
    <string name="document_storage">Document Storage</string>
    <string name="select_locker_size">Select locker size</string>


    <!--Calculate Cost-->
    <string name="checkout">Checkout</string>
    <string name="total_cost">Total Cost : </string>
    <string name="cost_calculation">Cost calculation</string>

    <!--Checkout-->
    <string name="type_to_confirm">Please type \'CONFIRM\' to checkout</string>

</resources>