<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    tools:context=".KnowAboutEasyStorage">


    <TextView
        android:id="@+id/easy_storage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/title"
        android:textColor="#0B0B0B"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.561"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:contentDescription="@string/main_logo"
        app:layout_constraintBottom_toBottomOf="@+id/easy_storage"
        app:layout_constraintEnd_toStartOf="@+id/easy_storage"
        app:srcCompat="@drawable/logo" />


    <TextView
        android:id="@+id/WhatIsEasyStorage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/what_easy_storage"
        android:textColor="#0B0B0B"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/easy_storage" />


    <TextView
        android:id="@+id/services"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="293dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/services"
        android:textColor="#0B0B0B"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/Furniture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/furniture"
        android:textColor="#0B0B0B"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/furniture"
        app:layout_constraintTop_toTopOf="@+id/furniture" />

    <TextView
        android:id="@+id/Documents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/document"
        android:textColor="#0B0B0B"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/document"
        app:layout_constraintTop_toTopOf="@+id/document" />

    <TextView
        android:id="@+id/Automobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/automobile"
        android:textColor="#0B0B0B"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/car"
        app:layout_constraintTop_toTopOf="@+id/car" />

    <TextView
        android:id="@+id/furniture_info"
        android:layout_width="338dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/furniture_info"
        android:textColor="#0B0B0B"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Furniture" />

    <TextView
        android:id="@+id/document_info"
        android:layout_width="333dp"
        android:layout_height="0dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/document_info"
        android:textColor="#0B0B0B"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/document"
        app:layout_constraintTop_toBottomOf="@+id/Documents" />

    <TextView
        android:id="@+id/automobile_info"
        android:layout_width="345dp"
        android:layout_height="43dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/automobile_info"
        android:textColor="#0B0B0B"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/car"
        app:layout_constraintTop_toBottomOf="@+id/Automobile" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/UpperBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="easy_storage,Logo"
        tools:layout_editor_absoluteY="88dp" />

    <ImageView
        android:id="@+id/furniture"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/services"
        app:srcCompat="@drawable/color_furniture" />

    <ImageView
        android:id="@+id/document"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="88dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/services"
        app:srcCompat="@drawable/color_document" />

    <ImageView
        android:id="@+id/car"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="188dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/services"
        app:srcCompat="@drawable/automobile" />

    <Button
        android:id="@+id/howitworks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:onClick="openActivityHowItWorks"
        android:text="@string/how_it_works"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.418"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/automobile_info" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-medium"
        android:foregroundGravity="center_horizontal"
        android:text="@string/what_easy_storage_answer"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WhatIsEasyStorage" />


</androidx.constraintlayout.widget.ConstraintLayout>