<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:backgroundTint="#64AAE3"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/easy_storage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.561"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:contentDescription="@string/main_logo"
        app:layout_constraintBottom_toBottomOf="@+id/easy_storage"
        app:layout_constraintEnd_toStartOf="@+id/easy_storage"
        app:srcCompat="@drawable/logo"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/previous_name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/head_name"
        app:layout_constraintTop_toTopOf="@+id/head_name" />


    <TextView
        android:id="@+id/head_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="56dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/user_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/easy_storage" />

    <TextView
        android:id="@+id/head_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/user_address"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/head_name"
        app:layout_constraintTop_toBottomOf="@+id/previous_name" />

    <TextView
        android:id="@+id/head_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/user_email"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/head_address"
        app:layout_constraintTop_toBottomOf="@+id/previous_address" />

    <TextView
        android:id="@+id/previous_email"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/head_email"
        app:layout_constraintTop_toTopOf="@+id/head_email" />

    <TextView
        android:id="@+id/head_mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/user_number"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/head_email"
        app:layout_constraintTop_toBottomOf="@+id/previous_email" />

    <TextView
        android:id="@+id/previous_mobile"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/head_mobile"
        app:layout_constraintTop_toTopOf="@+id/head_mobile" />

    <Button
        android:id="@+id/make_changes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:onClick="goToRegisterPage"
        android:text="@string/makeChanges"
        app:flow_horizontalAlign="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/previous_mobile"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/submit_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal|center_vertical"
        android:onClick="goToMainPage"
        android:text="@string/submit"
        app:flow_horizontalAlign="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/make_changes"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/previous_address"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:maxLines="5"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/head_address"
        app:layout_constraintTop_toTopOf="@+id/head_address" />

</androidx.constraintlayout.widget.ConstraintLayout>